[tool.poetry]
description = "A Python package to communicate with Stratocore's PUMAPI."
name = "pyppms"
version = "2.0.0-dev0"

license = "GPLv3"

authors = [
  "Niko Ehrenfeuchter <nikolaus.ehrenfeuchter@unibas.ch>",
  "Laurent Guerard <laurent.guerard@unibas.ch>",
]

readme = "README.md"

documentation = "https://imcf.one/apidocs/pyppms/pyppms.html"
homepage = "https://pypi.org/project/pyppms/"
keywords = ["ppms", "pumapi", "booking-system", "reservation-system"]
repository = "https://github.com/imcf/pyppms"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
PyYAML = "^6.0"
black = "^22.0"
pdoc = "^10.0"
pylint = "^2.9.3"
pylint-pytest = "^1.1.2"
pytest = "^7.0"
pytest-cov = "^3.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "-rs -vv --cov=pyppms --cov-report html --maxfail=1"
markers = [
  "online: enables tests requiring connection to a real PUMAPI (as opposed to a local cache)",
]
